--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "yajra/laravel-datatables-oracle": "^9.21",
         "zhpefe/select-tree": "^1.2"
     },
     "require-dev": {
