--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "anhskohbo/no-captcha": "^3.5",
         "barryvdh/laravel-dompdf": "^2.0",
         "encore/laravel-admin": "^1.8",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.7",
+        "huddledigital/zendesk-laravel": "^3.8",
         "jxlwqq/data-table": "^1.0",
         "jxlwqq/echarts": "^1.0",
         "laravel-admin-ext/chartjs": "^1.0",
