--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel-admin-ext/daterangepicker": "^1.0",
         "laravel-admin-ext/latlong": "^2.0",
         "laravel/framework": "^8.75",
+        "laravel/passport": "^10.3",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
