--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "mbence/opentbs-bundle": "^1.9",
         "ncjoes/office-converter": "^1.0",
         "phpoffice/phpword": "^1.1",
