--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "mbence/opentbs-bundle": "^1.9",
         "ncjoes/office-converter": "^1.0",
         "phpoffice/phpword": "^1.1",
+        "rap2hpoutre/fast-excel": "^4.1",
         "yajra/laravel-datatables-oracle": "^9.21",
         "zhpefe/select-tree": "^1.2"
     },
